public/application.css
form.control_button {
  float: left;
  padding-right: 10px;
}

img.card_image {
  padding-left: 5px;
}

div.controls {
  height: 30px;
  padding-left: 50px;
  padding-top: 10px;
  padding-bottom: 10px;
}

div.game_member_container {
  height: 250px;
  margin-bottom: 10px;
  margin-top: 10px;
  background-color: #f5f5f5;
  border: 1px solid #e3e3e3;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
}

div.member_info {
  width: 15%;
  padding-left: 20px;
  padding-top: 15px;
  padding-bottom: 15px;
  float: left;
  background-color: #f5f5f5;
}

div.member_cards {
  padding-top: 15px;
  padding-bottom: 15px;
  background-color: #f5f5f5;
}

.alert {
  margin-bottom: 10px;
}

